--- a/src/styles/EditModifiableSavedQuery.module.css
+++ b/src/styles/EditModifiableSavedQuery.module.css
@@ -10,7 +10,11 @@
 }
 
 .nameInput {
-    width: 100%;
+    width: 174px;
+}
+
+.queryInput {
+    width: 182px;
 }
 
 .buttonContainer {
